tests/invalid/str_lt_wrong_arg_count/main.py
def run_case() -> None:
    s: str = "hello"
    out: bool = s.__lt__()


if __name__ == "__main__":
    run_case()
